ckanext/amplus/assets/sass/_forms.scss
.facet {
  font-weight: $font-weight-600;
}

.filtered.pill {
  border-radius: 0;
  padding: .4rem .8rem;
  background-color: $extra-light;
  color: $gray-medium;
  margin: .5rem .2rem;

  a {
    color: $gray-medium;
  }
}

.input-group-btn {
  width: 10%;
  display: contents;

  .btn {
    font-size: 18px;
    position: relative;
    background-color: $white;

    &:hover{
      background-color: $gray-light;
    }
  }
}

.primary {
  .search-form {
    @include flex;
    @include flex-align-center;
    @include flex-justify-between;
    @include flex-wrap;
    border-bottom: none;

    >* {
      min-width: 25%;
      width: 25%;
    }

    >*:first-child {
      order: -2;
      box-shadow: $shadow-light;
      min-width: 50%;
      width: 50%;
    }

    >span {
      display: none;
    }

    >h1 {
      order: -1;
      color: $secondary;
      font-weight: $font-weight-600;
      padding-left: 2rem;
      margin-bottom: 30px;
      margin-top: 0;
    }

    .control-order-by {
      @include flex;
      @include flex-justify-end;
      margin-left: 0;
      position: relative;

      &:after,
      &:before {
        content: "";
        width: 0;
        height: 0;
        position: absolute;
        right: 16px;
        border-style: solid;
        background: $white;
        border-color: transparent $gray-medium;
        pointer-events: none;
        transform: rotate(90deg)
      }

      &:after {
        top: 60%;
        margin-top: -4px;
        border-width: 4px 0 4px 4px;
      }

      &:before {
        top: 40%;
        margin-top: -4px;
        border-width: 4px 4px 4px 0;
      }

      &>label {
        display: none;
      }
    }
  }

  .search-form .show-filters,
  .search-form .filter-list {
    min-width: auto;
    width: auto;
  }
}
.select {
  height: 46px;
  width: fit-content;
  box-shadow: $shadow-light;
  font-size: $font-size-14;
  padding-right: 4rem;
  padding-left: 1rem;
}

.primary {
  .tertiary {
    display: inline-flex;
    flex-direction: column;

    .search-form {

      .control-order-by {
        flex-direction: column;
      }

      h2,
      .control-order-by,
      .search-input-group {
        width: auto;
        min-width: 100%;
      }
    }
  }
}

.form-group {
  display: flex;
  justify-content: flex-end;
}

